# infra-pilot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  mcp-config.example.json
infra/: desired_state.yaml
infra/ansible/: ansible.cfg  site.yml
infra/observability/: metrics.json
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
infrapilot/: __init__.py  __main__.py  cli.py  config.py  executors.py  llm.py  models.py  reporting.py
infrapilot/agents/: __init__.py  auditor.py  base.py  configurator.py  observer.py  provisioner.py  remediator.py
infrapilot/engines/: __init__.py  crew.py  native.py
infrapilot/mcp_server/: __init__.py  server.py
infrapilot/tools/: __init__.py  ansible_tool.py  compliance_tool.py  monitoring_tool.py  remediation_tool.py  terraform_tool.py
policies/: policies.yaml
tests/: test_compliance.py  test_engine.py  test_monitoring.py  test_remediation.py
